Fix modal UX: hide scrollbar, close on outside click, add changelog entries

--- a/global.css
+++ b/global.css
@@ -34,5 +34,17 @@
     min-height: 44px;
     min-width: 44px;
   }
+
+  /* Hide scrollbars while keeping scroll */
+  .scrollbar-hidden {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+
+  .scrollbar-hidden::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+    display: none;
+  }
 }
 
